--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Chuck Norris Jokes</string>
+    <string name="number">Number</string>
+    <string name="get">GET</string>
 </resources>
