--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Chuck Norris Jokes</string>
     <string name="number">Number</string>
     <string name="get">GET</string>
+    <string name="cont">Continue</string>
+    <string name="title">title</string>
+    <string name="description">description</string>
 </resources>
