--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="day_night">Day/Night</string>
     <string name="day">Day</string>
     <string name="night">Night</string>
+    <string name="favbutton">favButton</string>
+    <string name="favourites">Favourites</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cokolwiek">COKOLWIEK</string>
+    <string name="textview">TextView</string>
 </resources>
